Fixed some Bugs in addLogs
